@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Added the ability to use a pre-imported risk model
   * Very small result values in scenario_damage (< 1E-7) are clipped to zero,
     to hide numerical artifacts
   * Removed an obsolete PickleableSequence class
